Fix the help description issue and other ui issue(#Moonshine-IDE/Moonshine-IDE#1008)

--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -359,6 +359,13 @@
 			{
 				if(this.helpDescriptionCheckBox.selected){
 					helpDescription.visible = helpDescription.includeInLayout = true;
+					if(allowmul.selected==false){
+						fieldlistinput.enabled = false;
+						fieldlistdisplay.enabled = false;
+					}else{
+						fieldlistinput.enabled = true;
+						fieldlistdisplay.enabled = true;
+					}
 				}else{
 					helpDescription.visible = helpDescription.includeInLayout = false;
 				}
