--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -13,6 +13,7 @@
 			import spark.events.IndexChangeEvent;
 			import mx.controls.Alert;
 			import mx.events.FlexEvent;
+			import mx.controls.listClasses.ListBaseContentHolder;
 
 			private var isNumber:Boolean = false;
 			private var inputType:String="";
@@ -372,6 +373,177 @@
 			
 			}
 
+			private function changeFontColorOption(event:Event):void
+			{
+				//fontcolorcheck
+				if(this.fontcolorcheck.selected){
+					fontPanel.visible = fontPanel.includeInLayout = true;
+				}else{
+					fontPanel.visible = fontPanel.includeInLayout = false;
+				}
+			}
+			private var pre_label_var:String="normal";
+
+				private function excludeMultipleSelect(item:ListBaseContentHolder):void
+			{
+				var normal_flag:Boolean = false;
+				var execute_array:Array=null;
+				var normalSelect:Boolean=false;
+				//<!ENTITY % font.styles "normal | bold | italic | underline |
+				//strikethrough | superscript | subscript | shadow | emboss | extrude">
+				var exclusions_normal:Array = ["bold","italic","underline","strikethrough","superscript","subscript","shadow","emboss","extrude"];
+				var exclusions_one_option:Array=["superscript","subscript","shadow","emboss","extrude"];
+				var exclusions_exclude_option:Array=["normal","superscript","subscript","shadow","emboss","extrude"];
+				var selected_array:Array=[];
+				var hasExlude:Boolean=false;
+				var hasExludeNum:Number=0;
+				var i:int = 0;
+				var checkItem:Object = null;
+				if(item){
+					for (i = 0; i < item.numChildren; i++){
+						checkItem = item.getChildAt(i);
+							if(checkItem){
+								//Alert.show("checkitem:"+checkitem.toString());
+								if(checkItem.hasOwnProperty("selected") && checkItem.selected==true  ){
+									selected_array.push(checkItem.label);
+								}
+							}
+					}
+
+					//Alert.show("selected_array:"+selected_array.toString());
+					if(selected_array&& selected_array.length>0){
+						for (i = 0; i < selected_array.length; i++){
+							if(selected_array[i].toString()=="normal"){
+								hasExlude=true;
+							}else if(exclusions_exclude_option.indexOf(selected_array[i].toString())>=0){
+								hasExludeNum++;
+							}
+						}
+						if(hasExludeNum>1){
+							hasExlude=true;
+						}
+					}
+					//Alert.show("hasExlude:"+hasExlude);
+					if(pre_label_var!=null){
+						for (i = 0; i < item.numChildren; i++){
+							checkItem = item.getChildAt(i);
+							if(checkItem){
+							//Alert.show("checkitem:"+checkitem.toString());
+							if(checkItem.hasOwnProperty("selected") ){
+								//	Alert.show("checkitem.label:"+checkitem.label);
+									if(checkItem.label==pre_label_var&& hasExlude==true){
+										//checkitem.enabled=false;
+										checkItem.selected=false;
+
+									}
+
+								}
+							}
+
+						}
+						//Alert.show("pre_label_var:"+pre_label_var);
+						pre_label_var=null;
+
+					}
+
+
+
+
+
+					for (i = 0; i < item.numChildren; i++){
+						checkItem = item.getChildAt(i);
+						if(checkItem){
+							//Alert.show("checkitem:"+checkitem.toString());
+							if(checkItem.hasOwnProperty("selected") && checkItem.selected==true){
+
+							if(checkItem.label=="normal"){
+								//Alert.show("checkitem.label:"+checkitem.label);
+								execute_array=exclusions_normal;
+								normalSelect=true;
+								pre_label_var="normal";
+								//break;
+							}
+
+
+							}
+						}
+					}
+						//Alert.show("execute_array1:");
+
+					for (i = 0; i < item.numChildren; i++){
+						checkItem = item.getChildAt(i);
+							//Alert.show("checkitem:"+checkitem.toString());
+							if(checkItem.hasOwnProperty("selected") && checkItem.selected==true){
+								//Alert.show("checkitem:"+checkitem.label);
+								if(checkItem.label=="superscript"){
+									if(normalSelect==false)
+									pre_label_var="superscript"
+									if(execute_array==null)
+									execute_array=["subscript","shadow","emboss","extrude"];
+										//break;
+								}
+								if(checkItem.label=="subscript"){
+									if(normalSelect==false)
+									pre_label_var="subscript"
+									if(execute_array==null)
+									execute_array=["superscript","shadow","emboss","extrude"];
+									//break;
+								}
+								if(checkItem.label=="shadow"){
+									if(normalSelect==false)
+									pre_label_var="shadow"
+									if(execute_array==null)
+									execute_array=["superscript","subscript","emboss","extrude"];
+									//break;
+								}
+								if(checkItem.label=="emboss"){
+									if(normalSelect==false)
+									pre_label_var="emboss"
+									if(execute_array==null)
+									execute_array=["superscript","subscript","shadow","extrude"];
+									//break;
+								}
+								if(checkItem.label=="extrude"){
+									if(normalSelect==false)
+									pre_label_var="extrude"
+									if(execute_array==null)
+									execute_array=["superscript","subscript","shadow","emboss"];
+									//break;
+								}
+							}
+					}
+
+						//Alert.show("execute_array2:");
+
+
+
+
+					for (var j:int = 0; j < item.numChildren; j++){
+						var checkitem_child:Object = item.getChildAt(j);
+							if(checkitem_child.hasOwnProperty("selected") ){
+								if(execute_array!=null && execute_array.length>0){
+									if(execute_array.indexOf(checkitem_child.label)>=0){
+										checkitem_child.selected=false;
+										checkitem_child.enabled=true;
+
+									}else{
+										//checkitem_child.selected=true;
+										checkitem_child.enabled=true;
+									}
+								}else{
+									checkitem_child.enabled=true;
+								}
+
+								if(normalSelect==false){
+									if(checkitem_child.label=="normal"){
+										checkitem_child.selected=false;
+									}
+								}
+							}
+					}
+				}
+			}
+
 	
        
 		]]>
@@ -595,16 +767,17 @@
 	</s:BorderContainer>  
 <!-- <forms:ToggleButtonSelectedForm label="Allowmultiple value" textProperty="allowmultivalues"/> -->
 			
-<s:FormItem label="Allow multiple values" skinClass="skins.FormItemSkin">
-        <s:CheckBox selected="{keywordsFlag}"  id="allowmul" change="allowMultipleValues_changeHandler(event)"/>
-</s:FormItem>
+
 
 
 <s:FormItem label="Help Description" skinClass="skins.FormItemSkin">
         <s:CheckBox id="helpDescriptionCheckBox"
                     selected="false"
                     change="changeHelpOption(event)"/>
-    	</s:FormItem>
+</s:FormItem>
+<s:FormItem label="Allow multiple values" skinClass="skins.FormItemSkin">
+        <s:CheckBox selected="{keywordsFlag}"  id="allowmul" change="allowMultipleValues_changeHandler(event)"/>
+</s:FormItem>
 	<s:BorderContainer 
              cornerRadius="0"
             borderStyle="solid" borderWeight="1" 
@@ -614,19 +787,48 @@
 	<domino:HelpDescription label="Help Description" textProperty="helpDescription" />	   
 	<domino:HelpDescription label="Field Hint" textProperty="fieldHint" />	
 	<s:Label text="Multi-Value Options"/>
-	<s:Label text="Separate values when user enters"/>
+	<s:Label text="Separate values when user enters" color="0xACA9A9"/>
 	<domino:MultipleCheckbox id="fieldlistinput" label=""  dynamicLabel="true" collectionProperty="separators" textProperty="listinputseparators"/>
-	<s:Label text="Display separate values with :"/>
-	<domino:MultipleCheckbox id="fieldlistdisplay" label="" dynamicLabel="true" collectionProperty="separators" textProperty="listdisplayseparator"/>		
-				
+	<s:Label text="Display separate values with " color="0xACA9A9"/>	
+	<forms:DropdownListForm id="fieldlistdisplay"
+                            label="" textProperty="listdisplayseparator"
+                            collectionProperty="separators" labelField="label" valueField="value"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>				
 	<s:Label text="Security Options"/>
-	<forms:DropdownListForm id="securityOptionsList"
+	<domino:MultipleCheckbox id="securityOptionsList" label=""  dynamicLabel="true" collectionProperty="securityOptions" textProperty="securityOptionsInput"/>
+	<!-- <forms:DropdownListForm id="securityOptionsList"
                             label="Display separate values with :" textProperty="securityOptionsInput"
                             collectionProperty="securityOptions" labelField="label" valueField="value"
 							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
-                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>						
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>						 -->
 	</s:VGroup> 
-	</s:BorderContainer>   	   	
+	</s:BorderContainer> 
+
+
+	<s:FormItem label="Font/Color" skinClass="skins.FormItemSkin">
+        <s:CheckBox id="fontcolorcheck"
+                    selected="false"
+                    change="changeFontColorOption(event)"/>
+</s:FormItem>
+
+	<s:BorderContainer 
+             cornerRadius="0"
+            borderStyle="solid" borderWeight="1" 
+            left="0" right="0" top="10" bottom="10" width="250" includeInLayout="false" visible="false" id="fontPanel">
+	<forms:TextForm label="Size" textProperty="size"
+					restrict="0-9"/>
+	<forms:DropdownListForm id="ddlcolor"
+                            label="Color" textProperty="color"
+                            collectionProperty="colors" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>
+		
+	<domino:MultipleCheckbox label="Style:" 
+		optionExculdeFunction="excludeMultipleSelect"
+		collectionProperty="fontStyles" textProperty="fontStyle"/>	
+	</s:BorderContainer>	
+
 
 	
 	<forms:ToggleButtonSelectedForm label="Required" textProperty="required"/>
