--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -826,8 +826,13 @@
                             collectionProperty="colors" labelField="label"
 							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
                             listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>
-		
-	<domino:MultipleCheckbox label="Style:" 
+	<forms:DropdownListForm id="ddlfontName"
+                            label="Font" textProperty="fontName"
+                            collectionProperty="fontNames" labelField="label"
+							labelDisplayFunction="getDominoFieldName" showTooltipFunction="getDominoFieldTooltip"
+                            listItemRenderer="view.primeFaces.forms.renderer.IncludeDropdownListRenderer"/>	
+	<s:Label text="Style"/>
+	<domino:MultipleCheckbox label=""  dynamicLabel="true"
 		collectionProperty="fontStyles" textProperty="fontStyle"/>
 		</s:VGroup> 	
 	</s:BorderContainer>	
