--- a/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
+++ b/src/view/domino/propertyEditors/InputTextPropertyEditor.mxml
@@ -774,8 +774,13 @@
 			<forms:DominoFormulaForm  textProperty="hidewhen" prompt="" id="hidewhen"   />        
 		 
             </mx:VBox >
-			 <mx:VBox  label="Field Extra HTML">
-                <mx:Label text="Accordion container panel 3"/>
+			 <mx:VBox  label="HTML tags">
+			 	<domino:TextForm label="Id    :" textProperty="htmlId"/>
+				<domino:TextForm label="Class :" textProperty="htmlClass"/>
+			   	<domino:TextForm label="Style :" textProperty="htmlStyle"/>
+			    <domino:TextForm label="Title :" textProperty="htmlTitle"/>
+				<domino:TextForm label="Other:" textProperty="htmlOther"/>
+              
             </mx:VBox >
         </mx:Accordion>
 
