--- a/src/view/domino/forms/TextForm.mxml
+++ b/src/view/domino/forms/TextForm.mxml
@@ -9,10 +9,12 @@
 		<s:FormLayout />
 	</suportclasses:layout>
     
-<s:FormItem label="{label}" skinClass="skins.FormItemSkin">
-		<s:HGroup width="100%">
+<s:FormItem  skinClass="skins.FormItemSkin" width="100%">
+		<s:HGroup width="100%" verticalAlign="middle">
+       
+        <s:Label text="{label}" width="40" direction="rtl"/>
 		<s:TextInput id="textInput"
-                     text="{bindableText}" width="100%" minWidth="156" maxChars="{_maxChar}" restrict="{restrict}"
+                     text="{bindableText}" minWidth="100" maxChars="{_maxChar}" restrict="{restrict}"
                      enter="textInput_changeHandler(event)" focusOut="textInput_changeHandler(event)" skinClass="skins.TextInputSkin" prompt="{prompt}"/>
 			
 		</s:HGroup>
